# CPT411_asgn1_program

./: .dockerignore  README.md  docker-compose.local.yml
backend/app/: pyproject.toml  run.sh
backend/app/app/: main.py
frontend/: package.json  tsconfig.json
frontend/src/components/: Footer.tsx  Header.tsx  Info.tsx  Navbar.tsx  Result.tsx  TextManipulation.tsx  TextSave.tsx
frontend/src/hooks/: useTextManipulation.tsx
frontend/src/services/: finder.service.ts
