[tool.poetry]
name = "app"
version = "0.0.1"
description = "FastAPI Server Boilerplate"
authors = ["ReJackTion"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "~0.18.3"
fastapi = "~0.85.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.2"}
tenacity = "^8.1.0"
gunicorn = "^20.1.0"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
pylint = "^2.15.3"
pytest = "^6.2.5"
requests = "^2.26.0"
